# JUNO

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
include/: app.hpp  camera.hpp  scene.hpp
src/: app.cpp  camera.cpp  main.cpp  scene.cpp
win32_libs/SFML-2.6.2/lib/: SFML-2.6.2 - Shortcut.lnk
